--- a/src/html/partials/story/intro.hbs
+++ b/src/html/partials/story/intro.hbs
@@ -1,5 +1,5 @@
 <div class='intro'>
-	<h1 class='intro__hed'><span>The</span> <span>Gyllenhaal</span> <span>Experiment</span></h1>
+	<h1 class='intro__hed'><span>The</span> <span>NBA</span> <span>Spelling Bee</span></h1>
 	{{!-- <p class='intro__dek'>{{doc.dek}}</p> --}}
 	<p class='intro__byline'>By
 		<a href='{{meta.author.url}}' target='_blank'>
