--- a/src/css/story/chart.styl
+++ b/src/css/story/chart.styl
@@ -7,8 +7,8 @@ svg.pudding-chart
 
 
 	+mq('bp-4')
-		visibility visible
-		max-height none
+		// visibility visible
+		// max-height none
 	
 	&.show-result
 		visibility visible
