--- a/src/css/story/header.styl
+++ b/src/css/story/header.styl
@@ -9,8 +9,11 @@ header
 	a.logo
 		display block
 		border none
-		max-width 9rem
-		margin 1rem auto
+		max-width 1.25rem
+		transform translateY(-2px)
+		+mq('bp-5')
+			max-width 1.5rem
+
 
 		svg
 			fill $off-black
@@ -20,14 +23,19 @@ header
 header.is-sticky
 	position fixed
 	transform translate3d(0,0,0)
-	background-color $white
-	box-shadow 0 0 7px 1px $gray-light
 	height 3rem
 	display flex
 	align-items center
-	
+	pointer-events none
+	box-shadow 0 0 3px 1px $gray-dark
+	+mq('bp-5')
+		background-color transparent
+		box-shadow none
+
 	a.logo
-		margin 0 auto
+		margin-left 0.75rem
+		margin-top 0.25rem
+		pointer-events auto
 	
 	.header__toggle
 		position fixed
@@ -40,6 +48,7 @@ header.is-sticky
 		z-index set-index(overlay)
 		border none 
 		background-color transparent
+		pointer-events auto
 		svg
 			stroke $off-black
 		
@@ -76,50 +85,36 @@ header.is-sticky
 
 		&.is-visible
 			transform translateX(0)
+			pointer-events auto
 
 		a
 			color $off-white
 			border-bottom 1px solid $off-white
 			&:hover
 				color $gray-light
+				background-color transparent
 
-		.menu__links
-			display flex
-			flex-wrap wrap
-			flex-direction row
-			+mq('bp-4')
-				flex-direction column
-			li
-				font-family $sans
-				font-weight 700
-				text-transform uppercase
-				margin-bottom 0.5em
-				margin-right 0.5em
-				set-type-size(large)
-				+mq('bp-3')
-					set-type-size(x-large)
+		.menu__links li
+			margin-bottom 0.5rem
+			set-type-size(large)
+			+mq('bp-3')
+				set-type-size(x-large)
 
 		.menu__patreon a
 			font-family $sans
 			font-weight 700
-			border-bottom 2px solid currentColor
+			color $off-black
+			background-color $off-white
+			padding 0.25em 0.5em
+			border-radius 4px
+			border none
+			border-bottom none
+			font-size 0.8em
 			text-transform uppercase
+			margin-left 0.5em
 			&:hover
-				opacity 0.75
-
-	.menu__patrons
-		ul
-			display flex
-			flex-wrap wrap
-		li
-			&:after
-				display inline
-				content ','
-				margin-right 0.25em
-			&:last-of-type:after
-				content '.'
-		// li
-		// 	set
+				background-color rgba($off-white, 0.75)
+				color $off-black
 
 // dark color version
 header.is-sticky.is-dark
@@ -149,5 +144,31 @@ header.is-sticky.is-dark
 		&.is-visible span
 			svg
 				stroke $off-black
+				
+	
+	.menu__patreon a
+		color $off-white
+		background-color $off-black
+		&:hover
+			background-color rgba($off-black, 0.75)
+			color $off-white
 
+.wordmark
+	margin 0 auto
+	position absolute
+	top 0
+	left 0
+	width 100%
+	z-index set-index(overlay)
+	background-color lighten($correct, 25)
 
+	a
+		display block
+		max-width 9rem
+		margin 0.5rem auto
+		border none
+		padding 0
+	
+	svg
+		path 
+			fill darken($correct-dark, 10)
