--- a/src/html/partials/base/header.hbs
+++ b/src/html/partials/base/header.hbs
@@ -1,10 +1,16 @@
 <a href='#content' class='skip-to-main'>Skip to main content</a>
 
-<header class='{{#ifEquals this 'sticky'}}is-sticky{{/ifEquals}}{{#ifEquals this 'sticky-dark'}}is-sticky is-dark{{/ifEquals}}'>
+<header
+	class='{{#ifEquals this 'sticky'}}is-sticky{{/ifEquals}}{{#ifEquals this 'sticky-dark'}}is-sticky is-dark{{/ifEquals}}'>
 	<a href='https://pudding.cool' target='_blank' class='logo'>
-		@@include('pudding/wordmark.svg')
+		@@include('pudding/logo.svg')
 	</a>
-	 {{#ifEquals this 'sticky'}} {{> base/sticky }} {{/ifEquals}}
-	 {{#ifEquals this 'sticky-dark'}} {{> base/sticky }} {{/ifEquals}}
+	{{#ifEquals this 'sticky'}} {{> base/sticky }} {{/ifEquals}}
+	{{#ifEquals this 'sticky-dark'}} {{> base/sticky }} {{/ifEquals}}
 </header>
 
+<div class='wordmark'>
+	<a href='https://pudding.cool' target='_blank'>
+		@@include('pudding/wordmark.svg')
+	</a>
+</div>
