--- a/src/css/story/intro.styl
+++ b/src/css/story/intro.styl
@@ -1,9 +1,11 @@
 .intro
 	margin 0 auto
-	padding 6rem 1rem 0 1rem
+	padding 6rem 1rem 3rem 1rem
+	background-color #e0e0e0
+
 
 	&__hed
-		max-width 60rem
+		max-width $column-width
 		margin 0 auto
 		text-align center
 		text-transform uppercase
