--- a/src/css/story/quiz.styl
+++ b/src/css/story/quiz.styl
@@ -5,6 +5,7 @@
 		// display block
 		// set-type-size(root, true)
 		color $wrong-dark
+		font-weight 700
 		// font-style italic
 
 	.quiz__content
