--- a/src/css/utils/variables.styl
+++ b/src/css/utils/variables.styl
@@ -45,33 +45,35 @@ $white = #fff
 $bg = #fff
 $fg = $off-black
 
-$blue2 = #72e5ef
-$red = #ffb2be
-$green = #7adc6e
-$blue2-dark = darken($blue2, 40)
-$red-dark = darken($red, 40)
-$green-dark = darken($green, 40)
-
 $purple = #bdd0fe
-$purple-dark = darken($purple, 50)
-$purple-med = darken($purple, 10)
-$blue = #78d9ed
-$blue-dark = darken($blue, 45)
-$blue-med = darken($blue, 10)
-$pink = #febde1
-$pink-dark = darken($pink, 50)
-$pink-med = darken($pink, 10)
+$red = lighten(#FF505A, 15)
+$red-dark = darken($red, 50)
+$red-med = darken($red, 5)
+$green = lighten(#00C5B6, 35)
+$green-dark = darken($green, 55)
+$green-med = darken($green, 10)
+
+
+// $purple = #bdd0fe
+// $purple-dark = darken($purple, 50)
+// $purple-med = darken($purple, 10)
+// $blue = #78d9ed
+// $blue-dark = darken($blue, 45)
+// $blue-med = darken($blue, 10)
+// $pink = #febde1
+// $pink-dark = darken($pink, 50)
+// $pink-med = darken($pink, 10)
 
 
 // v2
-$correct = $blue
-$wrong = $pink
+$correct = $green
+$wrong = $red
 $guess = $purple
-$correct-dark = $blue-dark
-$wrong-dark = $pink-dark
+$correct-dark = $green-dark
+$wrong-dark = $red-dark
 $guess-dark = $purple-dark
-$correct-med = $blue-med
-$wrong-med = $pink-med
+$correct-med = $green-med
+$wrong-med = $red-med
 $guess-med = $purple-med
 
 $primary= $off-black
