--- a/src/html/partials/story/intro.hbs
+++ b/src/html/partials/story/intro.hbs
@@ -1,6 +1,5 @@
 <div class='intro'>
-	<h1 class='intro__hed'><span>The</span> <span>NBA</span> <span>Spelling Bee</span></h1>
-	{{!-- <p class='intro__dek'>{{doc.dek}}</p> --}}
+	<h1 class='intro__hed'><img alt='NBA Spell Jam' src='assets/title.png'></h1>
 	<p class='intro__byline'>By
 		<a href='{{meta.author.url}}' target='_blank'>
 			{{meta.author.name}}
@@ -8,5 +7,4 @@
 			{{meta.author2.name}}
 		</a>
 	</p>
-	{{!-- <time class='intro__time'>February 2019</time> --}}
 </div>
